<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_barsMap"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/nav_BarsMap" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_debts" />
        <item
            android:id="@+id/nav_userInformations"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_adminCenter"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/menu_admin_center" />
        <item
            android:id="@+id/nav_logout"
            android:icon="?attr/actionModeCloseDrawable"
            android:title="@string/menu_logout" />

    </group>
</menu>