<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.wit.bierdeckel.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_beerpong"
        android:name="org.wit.bierdeckel.ui.gallery.BeerPongFragment"
        android:label="@string/menu_beerpong" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="org.wit.bierdeckel.ui.debts.DebtsFragment"
        android:label="@string/menu_debts"
        tools:layout="@layout/fragment_debts" />
    <fragment
        android:id="@+id/nav_userInformations"
        android:name="org.wit.bierdeckel.ui.userInformation.UserInformationsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_user_informations" />
    <fragment
        android:id="@+id/nav_barsMap"
        android:name="org.wit.bierdeckel.ui.bars.MapsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_maps" />

    <activity
        android:id="@+id/nav_logout"
        android:name="org.wit.bierdeckel.org.wit.signInUpOut.SingOutActivity"
        android:label="activity_log_out"
        tools:layout="@layout/activity_log_out" />

</navigation>