<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/holz_hintergrund"
    tools:context=".ui.gallery.BeerPongFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/firstPlaceView"
            android:layout_width="260dp"
            android:layout_height="200dp"
            android:src="@drawable/first_place"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <ImageView
            android:id="@+id/secondPlaceView"
            android:layout_width="260dp"
            android:layout_height="200dp"
            android:layout_marginTop="208dp"
            android:src="@drawable/second_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/firstPlaceView" />

        <ImageView
            android:id="@+id/thirdPlaceView"
            android:layout_width="260dp"
            android:layout_height="200dp"
            android:layout_marginTop="208dp"
            android:src="@drawable/third_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/secondPlaceView" />


        <TextView
            android:id="@+id/firstTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/firstTeam"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/firstPlaceView" />

        <TextView
            android:id="@+id/firstTeamPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/firstTeamPoints"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/firstPlaceView" />

        <TextView
            android:id="@+id/secondTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="160dp"
            android:text="@string/secondTeam"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/secondPlaceView" />

        <TextView
            android:id="@+id/secondTeamPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="65dp"
            android:text="@string/secondTeamPoints"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/secondPlaceView" />

        <TextView
            android:id="@+id/thirdTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="159dp"
            android:text="@string/thirdTeam"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/thirdPlaceView" />

        <TextView
            android:id="@+id/thirdTeamPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/thirdTeamPoints"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/thirdPlaceView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>


