<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_ID"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/bretter"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/header_view_image"
        android:layout_width="90dp"
        android:layout_height="82dp"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/bierdeckel_kreis" />

    <TextView
        android:id="@+id/header_view_name"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginVertical="1dp"
        android:background="@drawable/braun_rund"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/user_Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/buttonColor" />

    <TextView
        android:id="@+id/header_view_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/braun_rund"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/email"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/buttonColor" />

</LinearLayout>