<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/holz_hintergrund"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    tools:context="ui.adminCenter.AdminCenterFragment">

    <Button
        android:id="@+id/buttonCustomDebtAbbrechen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/buttonAbbrechen"
        android:textColor="@color/material_dynamic_neutral80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />

    <ImageView
        android:id="@+id/bierdeckelView"
        android:layout_width="312dp"
        android:layout_height="284dp"
        android:src="@drawable/bierdeckel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customDebtNachNameLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="@color/buttonColor"
        app:hintTextColor="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="@+id/bierdeckelView"
        app:layout_constraintEnd_toEndOf="@+id/bierdeckelView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bierdeckelView"
        app:layout_constraintTop_toTopOf="@+id/bierdeckelView"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customDebtNachNameText"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/SchuldnerNachNameHint"
            android:inputType="textEmailAddress"
            android:textColor="@color/buttonColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customDebtVorNameLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="@color/buttonColor"
        app:hintTextColor="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="@+id/bierdeckelView"
        app:layout_constraintEnd_toEndOf="@+id/bierdeckelView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bierdeckelView"
        app:layout_constraintTop_toTopOf="@+id/bierdeckelView"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customDebtVorNameText"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/SchuldnerNameHint"
            android:inputType="text"
            android:textColor="@color/buttonColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customDebtAmountLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="@color/buttonColor"
        app:hintTextColor="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="@+id/bierdeckelView"
        app:layout_constraintEnd_toEndOf="@+id/bierdeckelView"
        app:layout_constraintStart_toStartOf="@+id/bierdeckelView"
        app:layout_constraintTop_toTopOf="@+id/bierdeckelView"
        app:layout_constraintVertical_bias="0.9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customDebtAmountText"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/customDebtAmountHint"
            android:inputType="number|text"
            android:textAlignment="viewStart"
            android:textColor="@color/buttonColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCustomDebtAnlegen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/barAnlegen"
        android:textColor="@color/material_dynamic_neutral80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811" />
</androidx.constraintlayout.widget.ConstraintLayout>