<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/holz_hintergrund"
tools:context="ui.adminCenter.AdminCenterFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/barView"
        android:layout_width="415dp"
        android:layout_height="216dp"
        android:src="@drawable/bar_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <ImageView
        android:id="@+id/bierdeckelView"
        android:layout_width="312dp"
        android:layout_height="284dp"
        android:src="@drawable/bierdeckel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/strasseLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="@color/buttonColor"
        app:hintTextColor="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="@+id/bierdeckelView"
        app:layout_constraintEnd_toEndOf="@+id/bierdeckelView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bierdeckelView"
        app:layout_constraintTop_toTopOf="@+id/bierdeckelView"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/beschreibungText"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:hint="@string/barBeschreibung"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/barNameLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="@color/buttonColor"
        app:hintTextColor="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="@+id/bierdeckelView"
        app:layout_constraintEnd_toEndOf="@+id/bierdeckelView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bierdeckelView"
        app:layout_constraintTop_toTopOf="@+id/bierdeckelView"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/barNameText"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:hint="@string/barNameHint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ortLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="@color/buttonColor"
        app:hintTextColor="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="@+id/bierdeckelView"
        app:layout_constraintEnd_toEndOf="@+id/bierdeckelView"
        app:layout_constraintStart_toStartOf="@+id/bierdeckelView"
        app:layout_constraintTop_toTopOf="@+id/bierdeckelView"
        app:layout_constraintVertical_bias="0.9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kategorieText"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:hint="@string/barKategorie"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAnlegen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/barAnlegen"
        android:textColor="@color/material_dynamic_neutral80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />
</androidx.constraintlayout.widget.ConstraintLayout>